第三稿前　細かい修正前

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,75 +1,72 @@
-% 導入：学習の個人最適化
-近年，教育とITの融合が進む中で，「アダプティブラーニング」という言葉が注目されている．
-個人に最適化された学習内容の自動提供を実現するもので，その社会的影響の大きさからアメリカを中心として世界的に注目が集まっており，
+% 導入：アダプティブラーニング，学習最適化のトレンド
+近年，教育と情報技術の融合が進む中で，アダプティブラーニングという言葉が注目されている．
+個人に最適化された教育の自動提供を実現するもので，その社会的影響の大きさから世界的に注目が集まっており，
 関連するスタートアップや大学での研究に，多額の資金が投入されている．
 
-学習内容を個人に最適化するという考え方自体は，決して新しいものではないが，
-一人の教師が複数の生徒に対して同時に教育する形態の現在の学校教育では，
-全ての生徒に対して最適な学習内容を提供するには，障壁があった．
+% 個人最適化の歴史，学習科学の勃興
+教育を個人に最適化するという考え方自体は，決して新しいものではないが，
+教師のマンパワーに依存した従来の教育システムでは，すべての生徒に対して最適な教育を提供するには障壁があった．
+すべての生徒に最適な教育を提供するには，
+現代の情報技術を活用して，生徒の学習過程を分析し，学習内容を決定するような，新たな教育システムが必要であり，
+このようなシステムを作り上げようとする動向は「学習科学」という研究分野として確立され，今日大きな注目を集めている．
 
 
 % 背景１：オンライン学習サービスを利用した個人最適化，データ蓄積に伴う学習効果分析の進展
-こうした問題を，ITの活用によって解決しようとする動きの一つとして，アダプティブラーニングが浸透し始めているが，
-その原動力となっているのが，オンライン教育サービスの普及である．
-
+教育と情報技術の融合の象徴とも言えるアダプティブラーニングの躍進には．
+オンライン教育サービスの普及が背景にある．
 オンライン教育サービスは，
 サービスを利用する生徒の学習行動ログを収集することで，
 これまで困難であった大規模な学習効果分析を可能にしたことに加え，
-オンライン上の学習コンテンツを生徒が個人で利用するという形態を活用し，
-研究成果を元に学習コンテンツを個人に最適化して提供することを容易にした．
+生徒が個人で利用するという形態を活用し，
+研究成果を元に学習内容を個人に最適化して提供することを容易にした．
 
 
 % 背景２：深層学習の高まり，人間による解釈や概念の再構築
 一方，近年，教育に限らない多くの研究領域で，深層学習が注目されている．
-
 従来の機械学習では，人間が問題の特徴を捉えて素性を設計する必要があったが，
-深層学習では，目的に応じた素性を，データから自動で学習することが可能になった．
+深層学習では，目的に応じた素性をデータから自動で学習することが可能になった．
 既存の機械学習の手法を上回る性能を得られることに加え，
-人間が認識できないような，データの複雑な特徴を捉えることが可能になったため，
-これまで人間が作り上げてきた概念を，大きく塗り替える可能性を秘めている．
-
-
+人間が認識できないようなデータの複雑な特徴を捉えることが可能になったため，
+これまで人間が作り上げてきた概念を大きく塗り替える可能性を秘めている．
 % 深層学習＆教育
-こうした深層学習の技術は，オンライン学習サービスに蓄積された大規模なデータを用いる学習効果の分析にも活用が期待されており，
-生徒の知識状態を正しく把握することで，最適な学習内容を特定することを目的とする
-知識獲得予測の研究に，
+こうした深層学習の技術は，学習効果分析にも活用が期待されており，
+生徒の知識状態を正しく把握することで，最適な学習内容を特定することを目的とする知識獲得予測の研究に，
 深層学習を適用した例も報告されている．
 
 % 問題意識：学習効率の最適化という最終目標，知識獲得の予測アルゴリズム改良だけでなく，知識分類の定義自体を再構築できるはず
 しかし，こうした知識獲得予測の研究においては，
 予測アルゴリズムの部分に深層学習を適用しているものの，
 素性となる「知識」は，事前に人間が作成した知識分類によって定義されており，
-人間が設計した素性を利用する旧来の状況から脱していないのが現状である．
-
-データから特徴を自動で学習できる深層学習を活用すれば，
-人間が認識できないような，知識獲得の過程を反映した知識分類を学習できる可能性は高く，
-生徒の学習効率を最適化するという最終的な目標を，真に達成するには，
+人間が素性を設計するという旧来の状況から脱していないのが現状である．
+データから素性を自動で学習できる深層学習を活用すれば，
+人間が認識できないような，知識獲得の複雑な過程を反映した知識分類を学習できる可能性は高く，
+生徒の学習効率を最適化するという最終的な目標を真に達成するには，
 知識分類自体も深層学習によって最適化される必要があるといえる．
 
 
 % 本論文の目的
 本研究では，
-現在の知識獲得予測に用いられている，人間が作成した知識分類は，人間の複雑な知識獲得過程を表現する上では最適化されていない，という仮定に立ち，
-知識獲得予測を行う上で最適な知識分類を，深層学習に自動的に抽出させることを目的とする．
+現在の知識獲得予測で用いられる人間が作成した知識分類は，人間の複雑な知識獲得過程を表現する上では最適化された表現ではない，という仮定に立ち，
+知識獲得予測を行う上で最適な知識分類を，深層学習に自動的に学習させ，抽出することを目的とする．
 
 実験の結果，
-深層学習が抽出した知識分類を用いることで，
-人間が作成した既存の知識分類を用いる場合よりも，高い精度で知識獲得を予測できることが検証され，
-深層学習によって，知識獲得の予測性において最適化された知識分類を抽出できることが示された．
+深層学習が学習した知識分類を抽出し，知識獲得予測に用いることで，
+人間が作成した既存の知識分類を用いる場合よりも高い精度が得られることが検証され，
+知識獲得の予測性において最適化された知識分類を，深層学習によって抽出できることが示された．
 
 % 考察
 この結果は，
 人間が認識しきれない，人間の知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
 抽出された知識分類を活用することで，より最適化された学習内容を生徒に提供し，生徒の学習効率を高めることができる可能性を示唆している．
-
 さらに，
 研究の拡張として，
-本研究で用いた分析手法の教育医学における適用の可能性や，
-教育学以外の分野への応用の可能性を考察した．
+より良質な知識分類を学習するための手法の改善案や，
+本手法の学習科学における適用の可能性，
+そして学習科学以外の分野への応用の可能性を考察した．
 
 
 % まとめ
 本研究は．
-教育とITの融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
+教育と情報技術の融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
-本研究が，既存の学問体系の再構築，そして人間の学習や知識の解明につながると信じている．
+本研究が，新たな教育システムの構築，そして人間の学習や知識の解明につながると信じている．
