--- a/abstract_2.tex
+++ b/abstract_2.tex
@@ -1,5 +1,5 @@
 % 導入：学習の個人最適化
-近年，教育と情報技術の融合が進む中で，「アダプティブラーニング」という言葉が注目されている．
+近年，教育と情報技術の融合が進む中で，アダプティブラーニングという言葉が注目されている．
 個人に最適化された学習内容の自動提供を実現するもので，その社会的影響の大きさからアメリカを中心として世界的に注目が集まっており，
 関連するスタートアップや大学での研究に，多額の資金が投入されている．
 学習内容を個人に最適化するという考え方自体は，決して新しいものではないが，
