--- a/biblio.bib
+++ b/biblio.bib
@@ -788,3 +788,38 @@ and the 7th International Joint Conference on Natural Language Processing},
   journal={arXiv preprint arXiv:1611.01144},
   year={2016}
 }
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
+@misc{minsky1969perceptron,
+  title={Perceptron (expanded edition)},
+  author={Minsky, Marvin and Papert, Seymour},
+  year={1969},
+  publisher={MIT Press, Cambridge, MA. Original edition published in}
+}
+
+@article{srivastava2014dropout,
+  title={Dropout: a simple way to prevent neural networks from overfitting.},
+  author={Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal={Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1929--1958},
+  year={2014}
+}
+
+@techreport{dozat2015incorporating,
+  title={Incorporating Nesterov momentum into Adam},
+  author={Dozat, Timothy},
+  year={2015},
+  institution={Stanford University, Tech. Rep., 2015.[Online]. Available: http://cs229. stanford. edu/proj2015/054 report. pdf}
+}
