--- a/chapter02_2.tex
+++ b/chapter02_2.tex
@@ -236,7 +236,6 @@ MOOCsやITSを始めとするオンライン教育サービスは，
 \section{深層学習}
 
 本研究で用いる技術の核となっている，深層学習について述べる．
-%まず，深層学習を理解する上で必要となる周辺知識について説明した後，
 まず，深層学習の基礎となっているニューラルネットワークの概念について説明した後，
 深層学習の概要について述べ，
 さらに本研究で用いる深層学習モデルであるRecurrent Neural Networksについて詳述する．
@@ -247,12 +246,7 @@ MOOCsやITSを始めとするオンライン教育サービスは，
 深層学習は，機械学習における一分野であり，
 その中でもニューラルネットワークという特殊なモデル構造を拡張したものである．
 よって，まずはニューラルネットワークについて説明する．
-%深層学習は，機械学習における一分野で，ニューラルネットワークと呼ばれるモデル構造を多層に重ねたものである．
-%RNNやCNNなど目的に応じた様々な拡張があるが，どれも多層パーセプトンというモデル構造を基本としている．
-%本節では，ニューラルネットワークと多層パーセプトロンについて概説することで，深層学習に関する周辺知識を整理する．
 
-
-%\subsubsection{ニューロンの仕組み}
 ニューラルネットワークは，機械学習におけるモデル構造の一つで，人間の脳の神経回路の仕組みを模したものである．
 人間の脳は，膨大な数のニューロンと呼ばれる神経細胞から構成され，
 各ニューロンは相互に連結し，巨大なネットワークを成している．
@@ -263,14 +257,6 @@ MOOCsやITSを始めとするオンライン教育サービスは，
 それらが互いに接続してネットワークを成す構造をモデル化している．
 
 各ニューロンは図\ref{fig:neuron}のようにモデル化される．
-各ニューロンは他のニューロンから入力信号$x$を受け取るが，その信号の伝達効率は一様ではない．
-それぞれの入力には伝達効率として重み$w$が設定され，その重み付きの入力$w x$が対象のニューロンに加算されていく．
-%その総和$u$がある閾値$\theta$を超えた時，該当のニューロンは発火したものと見なし，他のニューロンに出力信号$y$が送られる．
-その総和$u$は事前に定められた活性化関数$f$に基づいて正規化され，出力される．
-活性化関数には様々な種類があり，
-図\ref{fig:step}で表されるような，０か１を出力するような単純なステップ関数以外に，
-図\ref{fig:activation}のシグモイド関数(sigmoid)，双曲線正接関数(tanh)などの非線形関数も存在する．
-なお，シグモイド関数と双曲線正接関数の式は以下の式\ref{eq:sigmoid}, \ref{eq:tanh}のとおりである．
 
 \begin{figure}[htb]
 \begin{center}
@@ -279,6 +265,36 @@ MOOCsやITSを始めとするオンライン教育サービスは，
 \caption{各ニューロンの仕組み}
 \label{fig:neuron}
 \end{figure}
+
+各ニューロンは他のニューロンから入力信号$x$を受け取るが，その信号の伝達効率は一様ではない．
+それぞれの入力には伝達効率として重み$w$が設定され，その重み付きの入力$w x$が対象のニューロンに加算されていく．
+%その総和$u$がある閾値$\theta$を超えた時，該当のニューロンは発火したものと見なし，他のニューロンに出力信号$y$が送られる．
+その総和$u$は事前に定められた活性化関数$f$に基づいて正規化され，出力される．
+活性化関数には様々な種類があり，
+式\ref{eq:step}で表されるような，閾値$\theta$を境に０か１を出力するような単純なステップ関数以外に，
+式\ref{eq:sigmoid}, \ref{eq:tanh}で表されるようなシグモイド関数(sigmoid)，双曲線正接関数(tanh)などの非線形関数も存在する．
+
+\begin{eqnarray}
+\label{eq:step}
+\varphi(x) = f(x - \theta) = \left\{
+	\begin{array}{l}
+	1 if x \geq \theta \\
+	0 if x < \theta
+	\end{array}
+\right.
+\end{eqnarray}
+
+\begin{eqnarray}
+\label{eq:sigmoid}
+\varphi(x) = \frac{1}{1 + e^{-x}}
+\end{eqnarray}
+
+\begin{eqnarray}
+\label{eq:tanh}
+\varphi(x) = \frac{e^x - e^{-x}}{e^x + e^{-x}}
+\end{eqnarray}
+
+
 
 \begin{figure}[t]
 \begin{center}
@@ -299,49 +315,60 @@ MOOCsやITSを始めとするオンライン教育サービスは，
 \end{figure}
 
 
-%以上の性質は以下の式で表される．(式)
-
-
-% 勾配法と活性化関数についても述べる
-% 重みとバイアス項　本参考に
-
-%\subsubsection{単純パーセプトロン}
 このようにモデル化された各ニューロンを，人間の脳の神経回路のように，互いに結合させてネットワーク化した例が図\ref{fig:neuralnetwork}である．
 これは1958年にRosenblattにより提案された単純パーセプトロンというネットワークで，
 二ューラルネットワークの元祖とも言われる最も基本的なネットワークである\cite{rosenblatt1958perceptron}．
 それぞれのニューロン（以下，ユニット）は，各層の間で互いに全結合しており，
-前の層からの入力に重みが掛け合わされ，バイアス項を加算したものに活性化関数が適用され，出力される．(式)
-%式
+前の層からの入力${\bf x}$に重み${\bf W}$が掛け合わされ，バイアス項${\bf b}$を加算したものに活性化関数$f$が適用され，出力される．
+層$i$から層$j$への出力の計算は以下の式に基づいて行われる．
+\begin{eqnarray}
+{\bf y_j} =  f({\bf W_j} {\bf x_i} + {\bf b_j})
+\end{eqnarray}
+なお．
+${\bf x_i}$は層$i$における出力($i=1$の時はモデルへの入力)を指し，
+${\bf W_j}$は重み行列を指し，
+${\bf b_j}$はバイアス項を指し，
+$f$は活性化関数を指し，
+${\bf y_j}$は層$j$における出力を指す．
 
-この計算を層ごとに行い，最終的な出力が決定され，事前に設定した誤差関数によってモデルの予測誤差が算出される．
-ニューラルネットワークでは，この誤差関数を重みやバイアスのパラメータによって微分して負の勾配方向を見つけることで，
-パラメータを勾配方向に修正するという作業を繰り返して，最適なパラメータが得られるように学習を進める．(式)
-% 式
-
+この計算を層ごとに順次行い，最終的な出力が決定され，事前に設定した誤差関数によってモデルの予測誤差が算出される．
+ニューラルネットワークでは，この誤差関数を重みやバイアスのパラメータによって微分して負の勾配方向を見つけ，
+パラメータを勾配方向に修正することを繰り返すことにより，最適なパラメータが得られるように学習を進める．
+重みの更新の基本的な仕組みは，以下の式によって表される．
+\begin{eqnarray}
+\nabla E &=& \frac{\partial E}{\partial {\bf w}}
+ = [\frac{\partial E}{\partial w_1}, \frac{\partial E}{\partial w_2}, \cdots, \frac{\partial E}{\partial w_n}] \\
+{\bf w}^{(t+1)} &=& {\bf w}^{(t)} - \epsilon \nabla E
+\end{eqnarray}
+なお，
+$E$は誤差関数であり，
+${\bf w}^(t)$は時刻$t$における重みベクトルであり，
+$\epsilon$は学習率であり，パラメータ更新の程度の大きさを決定する定数である．
 
 ニューラルネットワークの基礎として考案された単純パーセプトロンだが，
-このような単純な構造では複雑な問題設定を解くことはできず，
-排他的論理和(XOR)の演算すらも行えないことが指摘された(参考文献)
-より複雑な問題に対応するためにニューラルネットワークを多層にすることは早くから考案されていたが，
+排他的論理和(XOR)のような非線形問題を解けず，現実の複雑な問題には適用できないことが指摘された\cite{minsky1969perceptron}．
+また，ニューラルネットワークを多層にすることも早くから考案されていたが，
 極めて高い計算処理性能を要することが課題であり，長い間実用には堪えない時代が続いていた．
-そうした歴史を経た後，近年の計算機の性能向上や，その他のモデル上の技術的進歩を背景に，
-ニューラルネットワークをさらに多層に重ねて，より複雑な特徴を抽出し，表現できるように設計されたのが深層学習である．
+このような歴史を経た後，近年の計算機の性能向上や，その他のモデル設計上の技術的進歩を背景に，
+ニューラルネットワークをさらに多層に重ねて，より複雑な特徴を抽出し，非線形問題も含めた様々な問題を扱えるように設計されたのが深層学習である．
 
 
 \subsection{深層学習の概要}
-% - 深層学習の5W1Hについて説明
 深層学習は，機械学習における一分野で，ニューラルネットワークと呼ばれるモデル構造を多層に重ねたものである．
-RNNやCNNなど目的に応じた様々な拡張があるが，どれも図\ref{fig:deeplearning}のような多層パーセプトンというモデル構造を基本としている．
-多層パーセプトロンにおいても，層間の計算など，基本的な構造は単純パーセプトロンと大きな違いはない．
-しかし，中間層が多層になったことにより，何層にも渡って微分の連鎖規則を繰り返すことが必要になり，計算コストが膨大になり，現実的でない．
+画像処理に利用されるConvolutional Neural Networks\cite{lecun1998gradient}や
+系列データの処理に利用されるRecurreut Neural Networks\cite{williams1989learning}など，
+目的に応じた様々な拡張があるが，どれも図\ref{fig:deeplearning}のような多層パーセプトンというモデル構造を基本としている．
+多層パーセプトロンも，層間の信号の伝搬など，基本的な構造は単純パーセプトロンと大きな違いはない．
+しかし，隠れ層が多層になったことで，何層にも渡って微分の連鎖規則を繰り返すことが必要になり，計算コストが膨大で現実的でない．
 そのため考案されたのが誤差逆伝搬法\cite{rumelhart1988learning}である．
 誤差逆伝搬法では，出力結果に基づいて，
 出力層から入力層に向かって順番に重みを修正する手法により，
-複雑な問題を説明するような，ユニット間の重みを学習できるようになった．
-(詳しく式書く)
+複雑な問題を説明するような，ユニット間の重みを学習できるようになり，
+非線形問題も解くことが可能になった．
 
-この誤差逆伝搬法や，xxなどのより効率的な勾配降下法が考案されたことにより，
-現実的な計算コストで深層学習を行うことが可能になり，深層学習を用いた研究活動が急速に活発化した．
+この誤差逆伝搬法や，ミニバッチ勾配降下法や確率的勾配降下法などの効率的な勾配降下法，過学習を抑制するドロップアウトなど，
+様々な技術的工夫が考案されたことにより，
+現実的な計算コストで効率的に深層学習を行うことが可能になり，深層学習を用いた研究活動が急速に活発化した．
 
 
 深層学習の活用により，
