--- a/chapter03_4.tex
+++ b/chapter03_4.tex
@@ -49,15 +49,6 @@
 学習された知識分類の性質や構造を，既存の知識分類の構造と比較することにより，その性質を定性的に検証する．
 
 
-以上の分析手法全体の流れを，図\ref{fig:workflow}にまとめた．
-\begin{figure}[htb]
-\begin{center}
-\includegraphics[width=400pt]{./img/workflow.png}
-\end{center}
-\caption{分析手法全体の流れ}
-\label{fig:workflow}
-\end{figure}
-
 以降では，
 データセットの作成，
 提案手法による知識分類の学習，
@@ -387,6 +378,15 @@ $|\{d:d\ni t_{i}\}|$は単語$i$を含む文書数を指す．
 先程特定した特徴度に応じて既存タグのノードに対しエッジを引くことで，
 抽出タグと既存タグの関係性を可視化し比較する．
 
+
+以上の分析手法全体の流れを，図\ref{fig:workflow}にまとめた．
+\begin{figure}[htb]
+\begin{center}
+\includegraphics[width=400pt]{./img/workflow2.png}
+\end{center}
+\caption{分析手法全体の流れ}
+\label{fig:workflow}
+\end{figure}
 
 \vvspace
 以上，分析手法について述べた．
