--- a/grad_thesis.tex
+++ b/grad_thesis.tex
@@ -89,12 +89,12 @@
 \pagenumbering{arabic}
 \pagestyle{fancy}
 
-\input{chapter01_3}
-\input{chapter02_2}
-\input{chapter03_4}
-\input{chapter04_2}
-\input{chapter05_2}
-\input{chapter06_2}
+\input{chapter01}
+\input{chapter02}
+\input{chapter03}
+\input{chapter04}
+\input{chapter05}
+\input{chapter06}
 \input{chapter07}
 
 
