--- a/abstract.tex
+++ b/abstract.tex
@@ -1,12 +1,11 @@
 % 導入：アダプティブラーニング，学習最適化のトレンド
 近年，教育と情報技術の融合が進む中で，アダプティブラーニングという言葉が注目されている．
-個人に最適化された教育の自動提供を実現するもので，その社会的影響の大きさから世界的に注目が集まっており，
+個人に最適化された学習内容の自動提供を実現するもので，その社会的影響の大きさから世界的に注目が集まっており，
 関連するスタートアップや大学での研究に，多額の資金が投入されている．
-
 % 個人最適化の歴史，学習科学の勃興
-教育を個人に最適化するという考え方自体は，決して新しいものではないが，
-教師のマンパワーに依存した従来の教育システムでは，すべての生徒に対して最適な教育を提供するには障壁があった．
-すべての生徒に最適な教育を提供するには，
+学習内容を個人に最適化するという考え方自体は，決して新しいものではないが，
+教師のマンパワーに依存した従来の教育システムでは達成に障壁があった．
+すべての生徒に最適な学習を提供するには，
 現代の情報技術を活用して，生徒の学習過程を分析し，学習内容を決定するような，新たな教育システムが必要であり，
 このようなシステムを作り上げようとする動向は「学習科学」という研究分野として確立され，今日大きな注目を集めている．
 
@@ -18,7 +17,7 @@
 サービスを利用する生徒の学習行動ログを収集することで，
 これまで困難であった大規模な学習効果分析を可能にしたことに加え，
 生徒が個人で利用するという形態を活用し，
-研究成果を元に学習内容を個人に最適化して提供することを容易にした．
+研究成果を元に最適設計された学習内容を個人個人に提供することを容易にした．
 
 
 % 背景２：深層学習の高まり，人間による解釈や概念の再構築
@@ -34,12 +33,14 @@
 深層学習を適用した例も報告されている．
 
 % 問題意識：学習効率の最適化という最終目標，知識獲得の予測アルゴリズム改良だけでなく，知識分類の定義自体を再構築できるはず
-しかし，こうした知識獲得予測の研究においては，
+しかし，こうした知識獲得予測の最先端の研究においても，
 予測アルゴリズムの部分に深層学習を適用しているものの，
-素性となる「知識」は，事前に人間が作成した知識分類によって定義されており，
-人間が素性を設計するという旧来の状況から脱していないのが現状である．
-データから素性を自動で学習できる深層学習を活用すれば，
-人間が認識できないような，知識獲得の複雑な過程を反映した知識分類を学習できる可能性は高く，
+獲得の対象とされる「知識」は事前に人間が作成した知識分類によって定義され，所与のものとされている．
+人間が作成した知識分類は，伝統的な枠組みや可読性といった定性的な尺度で作成されたものが多く，
+実際の生徒の知識獲得の予測という定量的な文脈において最適なものとなっている根拠はないため，
+それを用いた知識獲得予測自体も最適なものとはいえない．
+大規模データから潜在的な特徴を自動で学習できる深層学習を活用すれば，
+人間が認識できないような，知識獲得に潜む複雑な特徴を反映した，最適な知識分類を作成できる可能性は高く，
 生徒の学習効率を最適化するという最終的な目標を真に達成するには，
 知識分類自体も深層学習によって最適化される必要があるといえる．
 
@@ -56,10 +57,11 @@
 
 % 考察
 この結果は，
-人間が認識しきれない，人間の知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
-抽出された知識分類を活用することで，より最適化された学習内容を生徒に提供し，生徒の学習効率を高めることができる可能性を示唆している．
-さらに，
-研究の拡張として，
+人間が認識しきれない，知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
+この手法を活用することにより，
+これまで人間が分類してきた既存の学問をより最適に構造化することで，
+生徒の学習効率を最大化し，また学問自体の発展も促す可能性を示唆している．
+さらに，研究の拡張として，
 より良質な知識分類を学習するための手法の改善案や，
 本手法の学習科学における適用の可能性，
 そして学習科学以外の分野への応用の可能性を考察した．
@@ -69,4 +71,5 @@
 本研究は．
 教育と情報技術の融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
-本研究が，新たな教育システムの構築，そして人間の学習や知識の解明につながると信じている．
+%本研究が，あらゆる学問における学習効率の向上や新たな教育システムの構築，そして人間の学習や知識の解明につながると信じている．
+本研究が，あらゆる学問における生徒の学習効率を向上させ，また，新たな教育システムの構築や学問の発達，そして人間の学習や知識の解明につながると信じている．
