--- a/abstract2.tex
+++ b/abstract2.tex
@@ -1,68 +1,72 @@
-% 問題意識追加
+% 導入：アダプティブラーニング，学習最適化のトレンド
+近年，教育と情報技術の融合が進む中で，アダプティブラーニングという言葉が注目されている．
+個人に最適化された教育の自動提供を実現するもので，その社会的影響の大きさから世界的に注目が集まっており，
+関連するスタートアップや大学での研究に，多額の資金が投入されている．
 
-% 背景１；オンライン学習サービスの普及によるビッグデータ蓄積
-近年，オンライン教育サービスの普及に伴い，
-教育におけるビッグデータの活用が進んでいる．
+% 個人最適化の歴史，学習科学の勃興
+教育を個人に最適化するという考え方自体は，決して新しいものではないが，
+教師のマンパワーに依存した従来の教育システムでは，すべての生徒に対して最適な教育を提供するには障壁があった．
+すべての生徒に最適な教育を提供するには，
+現代の情報技術を活用して，生徒の学習過程を分析し，学習内容を決定するような，新たな教育システムが必要であり，
+このようなシステムを作り上げようとする動向は「学習科学」という研究分野として確立され，今日大きな注目を集めている．
 
+
+% 背景１：オンライン学習サービスを利用した個人最適化，データ蓄積に伴う学習効果分析の進展
+教育と情報技術の融合の象徴とも言えるアダプティブラーニングの躍進には．
+オンライン教育サービスの普及が背景にある．
 オンライン教育サービスは，
-既存の学校教育と異なる，新たな学習機会を提供することに加え，
-サービスを利用する生徒の学習行動ログを収集することが可能なため，
-これまで困難であった，大規模な学習効果分析が可能になった．
+サービスを利用する生徒の学習行動ログを収集することで，
+これまで困難であった大規模な学習効果分析を可能にしたことに加え，
+生徒が個人で利用するという形態を活用し，
+研究成果を元に学習内容を個人に最適化して提供することを容易にした．
 
 
-% 背景２：深層学習の高まり
+% 背景２：深層学習の高まり，人間による解釈や概念の再構築
 一方，近年，教育に限らない多くの研究領域で，深層学習が注目されている．
-人間の脳の構造を模した多層のニューラルネットワーク構造によって，
-従来の機械学習では難しかった，データの複雑な意味表現を抽出することができ，
-多様な領域で大きな進展がもたらされている．
+従来の機械学習では，人間が問題の特徴を捉えて素性を設計する必要があったが，
+深層学習では，目的に応じた素性をデータから自動で学習することが可能になった．
+既存の機械学習の手法を上回る性能を得られることに加え，
+人間が認識できないようなデータの複雑な特徴を捉えることが可能になったため，
+これまで人間が作り上げてきた概念を大きく塗り替える可能性を秘めている．
+% 深層学習＆教育
+こうした深層学習の技術は，学習効果分析にも活用が期待されており，
+生徒の知識状態を正しく把握することで，最適な学習内容を特定することを目的とする知識獲得予測の研究に，
+深層学習を適用した例も報告されている．
 
-こうした深層学習の技術を，
-オンライン教育サービスに蓄積された大規模な学習行動ログに対して適用することで，
-これまで困難だった，人間の複雑な知識構造や学習効果の分析が可能になった．
+% 問題意識：学習効率の最適化という最終目標，知識獲得の予測アルゴリズム改良だけでなく，知識分類の定義自体を再構築できるはず
+しかし，こうした知識獲得予測の研究においては，
+予測アルゴリズムの部分に深層学習を適用しているものの，
+素性となる「知識」は，事前に人間が作成した知識分類によって定義されており，
+人間が素性を設計するという旧来の状況から脱していないのが現状である．
+データから素性を自動で学習できる深層学習を活用すれば，
+人間が認識できないような，知識獲得の複雑な過程を反映した知識分類を学習できる可能性は高く，
+生徒の学習効率を最適化するという最終的な目標を真に達成するには，
+知識分類自体も深層学習によって最適化される必要があるといえる．
 
-特に，生徒の学習効果を最適化する目的で古くから行われてきた，
-生徒の知識獲得を予測する研究は，
-オンライン学習サービスにおける生徒の学習効率向上に直接的に寄与することに加え，
-深層学習を適用することによって，高い精度での予測が可能な上，知識間のネットワーク構造を抽出できることが報告されており，
-今，大きな注目を集めている研究分野の一つである．
-
-% 人間を超えるor人間で判断できない部分の強みとしての要素？
 
 % 本論文の目的
-本研究では，生徒の学習行動ログに対して，深層学習を適用し，生徒の知識獲得を予測する．
-既存の研究では，事前に専門家が作成した知識分類を用いて，知識獲得の予測が行われていたが，
-本論文では，人間が作成した知識分類は，現実の生徒の知識獲得を説明する上で最適化されたものではない，という仮説に立ち，
-深層学習モデルによって生徒の知識獲得予測を行う過程で，
-モデル自身に新たな知識分類を自動で抽出させることで，
-より最適化された知識分類を獲得することを目的とする．
+本研究では，
+現在の知識獲得予測で用いられる人間が作成した知識分類は，人間の複雑な知識獲得過程を表現する上では最適化された表現ではない，という仮定に立ち，
+知識獲得予測を行う上で最適な知識分類を，深層学習に自動的に学習させ，抽出することを目的とする．
 
 実験の結果，
-深層学習が抽出した知識分類を用いることで，
-人間が作成した既存の知識分類を用いる場合より高い精度で
-知識獲得を予測できることが検証された．
-
-また，抽出された知識分類を分析した結果，
-既存の分類を横断するような，複数の分野の基礎となっている知識表現や，
-これまで一つとされていた分野をより階層的に分解するような，難易度を表す知識表現などが獲得されていることを確認した．
+深層学習が学習した知識分類を抽出し，知識獲得予測に用いることで，
+人間が作成した既存の知識分類を用いる場合よりも高い精度が得られることが検証され，
+知識獲得の予測性において最適化された知識分類を，深層学習によって抽出できることが示された．
 
 % 考察
-これらの検証結果は，
-知識獲得を予測する上では，
-人間が定義した知識分類よりも優れた知識分類を，
-深層学習が獲得したことを示しており，
-この知識分類を活用することにより，
-より最適化された学習プロセスを設計できる可能性を示唆している．
-
+この結果は，
+人間が認識しきれない，人間の知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
+抽出された知識分類を活用することで，より最適化された学習内容を生徒に提供し，生徒の学習効率を高めることができる可能性を示唆している．
 さらに，
 研究の拡張として，
-本研究で用いた分析手法の教育学での適用可能性や，
-教育学以外の分野への応用可能性を考察した．
+より良質な知識分類を学習するための手法の改善案や，
+本手法の学習科学における適用の可能性，
+そして学習科学以外の分野への応用の可能性を考察した．
 
 
 % まとめ
 本研究は．
-オンライン学習サービスの普及や，教育分野におけるビッグデータ分析の活発化，深層学習の躍進など，
+教育と情報技術の融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
-本研究が，既存の教育システムの再構築，そして人間の学習や知識の解明につながると信じている．
-
-
+本研究が，新たな教育システムの構築，そして人間の学習や知識の解明につながると信じている．
