--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -15,14 +15,14 @@
 研究室の教官である中山浩太郎先生に，
 深く感謝致します．
 
-上野山克也助教授には，
+上野山勝也助教授には，
 研究の方向性や論文の構成について，
 多大なご指導をいただきました．
 深く感謝致します．
 
 松尾研究室やGCIの皆様には，多大なご協力，ご支援いただきました．
-秘書の 中野佐恵子さん，永本登代子さん，浪岡亮子さん，木全弥栄さんは，日頃から研究室の環境を整えて下さり，研究生活を支えてくださいました．
-松尾研究室の博士・修士課程の先輩である 岩澤有祐さん，飯塚修平さん，野中尚輝さん，鈴木雅大さん，金子貴輝さん，那須野薫さん，黒滝紘生さん，保住純さん，冨山翔司さんには，
+秘書の中野佐恵子さん，永本登代子さん，浪岡亮子さん，木全弥栄さんは，日頃から研究室の環境を整えて下さり，研究生活を支えてくださいました．
+松尾研究室の博士・修士課程の先輩である岩澤有祐さん，飯塚修平さん，野中尚輝さん，鈴木雅大さん，金子貴輝さん，那須野薫さん，黒滝紘生さん，保住純さん，冨山翔司さんには，
 研究の相談に幾度も乗っていただき，多大なご助力をいただきました．
 特に，研究テーマや，研究全体の設計について何度も相談に応じていただいたことに加え，
 日常の議論を通じて多くの知識や示唆をいただいた那須野薫さんには，多大なるご助力に深く感謝致します．
@@ -33,8 +33,8 @@
 
 \begin{flushright}
 東京大学工学部\\
-システム創成学科知能社会コース\\
-松尾研究室　学部四年\\
+システム創成学科知能社会システムコース\\
+松尾研究室　学部4年\\
 中川大海\\
 平成29年3月\\
 \end{flushright}
