--- a/biblio.bib
+++ b/biblio.bib
@@ -807,19 +807,35 @@ and the 7th International Joint Conference on Natural Language Processing},
   publisher={MIT Press, Cambridge, MA. Original edition published in}
 }
 
-@article{srivastava2014dropout,
-  title={Dropout: a simple way to prevent neural networks from overfitting.},
-  author={Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
-  journal={Journal of Machine Learning Research},
-  volume={15},
-  number={1},
-  pages={1929--1958},
-  year={2014}
-}
-
 @techreport{dozat2015incorporating,
   title={Incorporating Nesterov momentum into Adam},
   author={Dozat, Timothy},
   year={2015},
   institution={Stanford University, Tech. Rep., 2015.[Online]. Available: http://cs229. stanford. edu/proj2015/054 report. pdf}
+}
+
+@misc{gakushushidouyouryou,
+  _author={文部科学省, 初等中等教育局教育課程課},
+  author={文部科学省},
+  year={2011},
+  title={現行学習指導要領・生きる力：学習指導要領とは何か？},
+  howpublished={\url{http://www.mext.go.jp/a_menu/shotou/new-cs/idea/1304372.htm}}
+}
+
+@article{baldi1989neural,
+  title={Neural networks and principal component analysis: Learning from examples without local minima},
+  author={Baldi, Pierre and Hornik, Kurt},
+  journal={Neural networks},
+  volume={2},
+  number={1},
+  pages={53--58},
+  year={1989},
+  publisher={Elsevier}
+}
+
+@mastersthesis{nasuno2016深層学習,
+  author={那須野薫},
+  title={深層学習を用いたMOOCsの学習者の知識構造の分析},
+  school={東京大学大学院工学系研究科技術経営戦略学専攻},
+  year={2016},
 }
