--- a/chapter07.tex
+++ b/chapter07.tex
@@ -9,18 +9,23 @@
 本論文では，
 既存の知識獲得予測における問題として，
 人間が作成した知識分類を利用していることを指摘し，
-深層学習を適用することによって，
-知識獲得の予測性において最適化された知識分類を抽出できることを検証した
-
+提案手法を適用することによって，
+知識獲得の予測性において最適化された知識分類を抽出できることを検証した．
 また，抽出された知識分類を定量的・定性的に分析することにより，
 知識の内容的な関係性と，分類ごとの回答に関する情報量を最適に分配することが，知識獲得の予測性の向上に寄与することがわかった．
 \vvspace
 
-本研究の成果を実際の教育現場で活用例として，教材推薦システムへの適用を論じ，
-既存の手法では困難だった，他の科目やオンライン教育サービスへ適用できる可能性がある一方，
-複数科目を統合した知識獲得や，大学水準の知識獲得に関しては，検証実験を行う必要が有ることを述べた．
-\vvspace
+実験結果を踏まえ，本手法の汎用性と成果の実用性についての考察を行った，
 
+本手法の汎用性については，多様なデータへの適用可能性の面から論じ，
+既存の手法では困難だった，他の科目やオンライン教育サービスにも適用できる可能性がある一方，
+複数科目を統合した知識獲得や，大学水準の知識獲得に関しては，検証実験を行う必要があることを述べた．
+
+本研究の成果の実用性については，教材推薦システムへの適用と学問体系の構造化の面から論じ，
+生徒の学習効率を向上させるという実用上の意義と，
+未発達の学問体系を構造化することで当該学問の発達に寄与するという学術的な意義を論じた．
+
+\vvspace
 
 さらに，本研究の拡張として，
 より良質な知識分類を学習するために活用できる最新の深層学習技術や，
@@ -33,4 +38,4 @@
 本研究は．
 教育と情報技術の融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
-本研究が，新たな教育システムの構築，そして人間の学習や知識の解明につながると信じている．
+本研究が，あらゆる学問における生徒の学習効率を向上させ，また，新たな教育システムの構築や学問の発達，そして人間の学習や知識の解明につながると信じている．
