--- a/grad_thesis.tex
+++ b/grad_thesis.tex
@@ -72,7 +72,7 @@
 \renewcommand{\baselinestretch}{1.3} 
 \setstretch{1.3}
 
-\input{abstract_2}
+\input{abstract}
 
 
 \newpage
@@ -112,8 +112,8 @@
 
 
 
-\appendix
-\input{appendix}
+%\appendix
+%\input{appendix}
 \addcontentsline{toc}{chapter}{謝辞}
 \input{acknowledgement}
 
